<resources>
    <string name="app_name">LOST&amp;\nFOUND</string>
    <string name="lost_an_item_or_found_a_missing_item">Lost an item or found a missing item…</string>
    <string name="best_platform_to_make_a_report">best platform to make a report</string>
    <string name="get_started">Get Started</string>
    <string name="welcome">Welcome! </string>
    <string name="sign_in_with_google_account">Sign In With Google Account</string>
    <string name="name_display">Name Display</string>
    <string name="email_display">Email Display</string>
    <string name="logout_account">Logout Account</string>
    <string name="nextFromSignIn">Next</string>
    <string name="title_activity_ankasa">LOST&amp;FOUND</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_aboutUs">About Us</string>


    <string name="signInMessage">easily and quickly report about lost,stolen or found things;\n
            \n show locations of losses on a map;\n
            \n create your own lists of reports;\n
            \n use different pins for reports;\n
            \n store, edit and share reports;\n
            \n make photos of things.</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="news_feed">News Feed</string>
    <string name="make_a_report">Make A Report</string>
    <string name="i_lost">I LOST</string>
    <string name="i_found">I FOUND</string>
    <string name="report">REPORT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_phone_number">Your Phone number</string>
    <string name="description">Description</string>
    <string name="upload_photo_from_gallary">Upload From Gallary</string>
    <string name="capture_photo">Capture</string>
    <string name="whereyouthinkyoulostit">Where You Lost It</string>

    <string name="title_activity_basic">Basic</string>
    <string name="nav_header_title"><!--Android Studio-->Welcome To</string>
    <string name="nav_header_subtitle"><!--android.studio@android.com-->Lost&amp;Found</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lost_items">Lost Items</string>
    <string name="found_items">Found Items</string>
    <string name="report_lost">Report Lost</string>
    <string name="report_found">Report Found</string>

    <string name="title_activity_home_lost">Lost Items</string>
    <string name="title_activity_home_found">Found Items</string>
    <string name="_2018_KrisyMay_project_all_rights_reserved">2019 -PROJECT.All rights reserved</string>
    <string name="aboutApp">


Globally there are 610 million people searching for something or someone lost. 73% of lost items never return. 20% of lost items is actually stolen. 25% of lost cats and 7% of lost dogs never return to their owner.

If you ever lost something (who hasn’t?) you know how frustrating it can be. Where did I loose it? Did anyone find it? How can I find him/her? What would I do if I found something? Even with all the quick share possibilities via social media it’s still frustrating. So wouldn’t it be awesome if there was one place where you know people would go to report lost and found? We are creating that place!

How frustrating it is when you lose something, especially when it has emotional value to you. Like that jewelry you got from your late grandmother. Or when your beloved pet goes missing? It’s invaluable. However, it’s 100% certain that whenever you lose something somebody will find it. It simply cannot dissolve.

The person that finds it need to report it and you need to initiate a search. Where to begin? A lot of hassle these days. Not anymore. Lost&amp;Found is a simple way to connect somebody who lost something with the person that found it.

It’s free and easy to use. So even though you haven’t lost anything yet, help others around you by downloading the app and be an active finder. Hey, you might even get a fun reward for it.

We have a vision on becoming the largest Lost &amp; Found application by helping each other. So please feel free to download the app and let us know what you think. We would appreciate it if you would share Lost&amp;Found with your friends and spread the word.


    </string>
    <string name="venuefragment">
        Will be updated on next release as a project work
        This fragment show an exact location of lost and found items on a map
    </string>
    <string name="accountfragment">
         Will be updated on next release as a project work
        This fragment show the items reported by a user and items can be deleted by the user
    </string>
    <string name="studentfragment">
         Will be updated on next release as a project work
        This fragment allow report solely for Student\'s Identity cards
        Where you can switch as reporting either found or lost
    </string>

    <string name="noteTitle"> (LOST&amp;FOUND)Lost Item Reported</string>
    <string name="noteBody"> Open App to view reported item </string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>

    <string name="help">Help</string>
    <string name="home">Home</string>
    <string name="identity_cards">Identity Cards</string>
    <string name="student_s_id">Student\'s ID</string>
    <string name="faq">FAQ</string>
    <string name="data_security">Data Security</string>
    <string name="tell_a_friend">Tell A Friend</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_myaccount">My Account</string>
    <string name="title_ReportItem">Report Item</string>
    <string name="title_search">Search</string>
    <string name="title_more">More</string>


    <string name="my_account">My Account</string>
    <string name="report_item">Report Item</string>
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="contact_us">Contact Us</string>
    <string name="todo">TODO</string>
    <string name="account_fragment">ACCOUNT FRAGMENT</string>
    <string name="textview">TextView</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="_0_100">0/100</string>
    <string name="why_lost_amp_found"><![CDATA[Why Lost&Found]]></string>
    <string name="welcome_to_lost_amp_found"><![CDATA[Welcome To Lost&Found]]></string>
    <string name="kind_login_with_school_details">Kindly Login With School Details</string>


</resources>

