<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_tellafriend"
            android:icon="@drawable/ic_settings_phone_black_24dp"
            android:title="@string/tell_a_friend" />
        <item
            android:id="@+id/nav_security"
            android:icon="@drawable/ic_security_black_24dp"
            android:title="@string/data_security" />
        <item
            android:id="@+id/nav_faq"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/faq" />

    </group>

    <item android:title="@string/identity_cards">
        <menu>
            <item
                android:id="@+id/nav_studentID"
                android:icon="@drawable/ic_credit_card_black_24dp"
                android:title="@string/student_s_id" />

        </menu>
    </item>


    <item android:title="">
        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_black_24dp"
                android:title="@string/logout_account" />

        </menu>
    </item>

</menu>
