<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_myaccount"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/my_account"/>

    <item
        android:id="@+id/navigation_ReportItem"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/report_item"/>
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"/>

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more_black_24dp"
        android:title="@string/more"/>

</menu>
