<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/search"
        android:iconTint="#ffffff"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

    <item
        android:id="@+id/contact_us"
        android:orderInCategory="100"
        android:title="@string/contact_us"
        app:showAsAction="never" />


    <item
        android:id="@+id/about_us"
        android:orderInCategory="100"
        android:title="@string/why_lost_amp_found"
        app:showAsAction="never" />

</menu>
