<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardviewlostlayout">

        <LinearLayout

        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <ImageView
            android:id="@+id/lostimagespreview"
            android:layout_height="200dp"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:background="@drawable/noimage"/>


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/your_name"
            android:id="@+id/namepost"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/your_email"
            android:id="@+id/emailpost"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/your_phone_number"
            android:id="@+id/phonepost"
            />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/description"
            android:id="@+id/descriptionpost"
            />


        </LinearLayout>

</android.support.v7.widget.CardView>