<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/lost">

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:text="@string/get_started"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/lost_an_item_or_found_a_missing_item"
        android:textColor="@color/likeWhite"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:text="@string/best_platform_to_make_a_report"
        android:textColor="@color/likeWhite"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/welcome"
        android:textColor="@color/welcomeColor"
        android:textSize="19sp" />



</RelativeLayout>