<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".IFoundActivity"
    android:background="@color/bckreport">




    <EditText
        android:id="@+id/name"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:hint="@string/your_name"
        android:inputType="text|textShortMessage"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="167dp"
        android:ems="10"
        android:hint="@string/your_phone_number"
        android:inputType="phone"
        android:textSize="14sp"
        android:maxLength="10"/>


    <TextView
        android:id="@+id/ifoundtextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/email"
        android:layout_marginStart="109dp"
        android:layout_marginTop="15dp"
        android:text="@string/i_found"
        android:textAlignment="center"
        android:textSize="24sp" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:id="@+id/da"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/phone"
        android:layout_below="@+id/phone">



    <AutoCompleteTextView
        android:id="@+id/descriptionTextView"
        android:layout_width="286dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone"
        android:layout_alignBottom="@+id/phone"
        android:hint="@string/description"
        android:inputType="textAutoCorrect|textMultiLine|textLongMessage|textFilter|textCapSentences"
        android:maxLength="100" />


    </android.support.design.widget.TextInputLayout>



    <TextView
        android:id="@+id/title_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/_0_100"
        android:layout_below="@+id/da"
        android:layout_alignParentRight="true"
        android:layout_marginRight="65dp"/>




    <!--<EditText-->
        <!--android:id="@+id/descriptionTextView"-->
        <!--android:layout_width="298dp"-->
        <!--android:layout_height="83dp"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_alignStart="@+id/email"-->
        <!--android:layout_marginStart="-2dp"-->
        <!--android:layout_marginTop="221dp"-->
        <!--android:ems="10"-->
        <!--android:hint="@string/description"-->
        <!--android:gravity="bottom"-->
        <!--android:inputType="textAutoCorrect|textMultiLine|textLongMessage"-->
        <!--android:selectAllOnFocus="false"-->
        <!--android:singleLine="false"-->
        <!--android:textSize="14sp" />-->

    <Button
        android:id="@+id/camerabutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="142dp"
        android:drawableStart="@drawable/ic_menu_camera"
        android:text="@string/capture_photo" />
        <!--android:onClick="camerabtnclicked"/>-->


    <ImageView
        android:id="@+id/Cameraimageview"
        android:layout_width="229dp"
        android:layout_height="177dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/todo"
        android:visibility="visible" />

    <Button
        android:id="@+id/ifoundreportbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="26dp"
        android:layout_toEndOf="@+id/ifoundtextView"
        android:onClick="ifoundbuttonClicked"
        android:text="@string/report_found" />


    <Button
        android:id="@+id/fetch_locations"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="87dp"
        android:text="GET GPS" />

    <TextView
        android:id="@+id/user_locations"
        android:layout_width="318dp"
        android:layout_height="62dp"
        android:layout_above="@+id/Cameraimageview"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="22dp"
        android:onClick="gps_location"
        android:text="GPS LOCATION" />




</RelativeLayout>