<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cardviewfoundlayout">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/foundimagespreview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/comingsoon" />

        <TextView
            android:id="@+id/namepost"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/your_name" />

        <TextView
            android:id="@+id/emailpost"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/your_email" />

        <TextView
            android:id="@+id/phonepost"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:text="@string/your_phone_number" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/phone_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="dialNumber"
            android:src="@drawable/ic_call_black_24dp"
            android:tint="@color/contactcolor"/>

            <ImageButton
                android:id="@+id/phone_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_message_black_24dp"
                android:tint="@color/contactcolor"
                android:onClick="smsSendMessage"/>



            <ImageButton
                android:id="@+id/phone_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_email_black_24dp"
                android:tint="@color/contactcolor"/>

        </RelativeLayout>


        <TextView
            android:id="@+id/descriptionpost"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/description" />


    </LinearLayout>

</android.support.v7.widget.CardView>