<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ILostActivity"
    android:background="@color/bckreport">


    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:id="@+id/da_name"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_below="@id/ilosttextView"-->
        <!--android:layout_alignBottom="@id/ilosttextView"-->
        <!--&gt;-->
      <!---->

        <!--<AutoCompleteTextView-->
            <!--android:id="@+id/name"-->
            <!--android:layout_width="288dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/ilosttextView"-->
            <!--android:layout_alignBottom="@id/ilosttextView"-->

            <!--android:hint="@string/your_name"-->
            <!--android:inputType="text|textShortMessage" />-->


    <!--</android.support.design.widget.TextInputLayout>-->

    <EditText
        android:id="@+id/name"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:hint="@string/your_name"
        android:inputType="text|textShortMessage"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="167dp"
        android:ems="10"
        android:hint="@string/your_phone_number"
        android:inputType="phone"
        android:textSize="14sp"
        android:maxLength="10"
        android:autofillHints="" />


    <TextView
        android:id="@+id/ilosttextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/email"
        android:layout_marginStart="109dp"
        android:layout_marginTop="15dp"
        android:text="@string/i_lost"
        android:textAlignment="center"
        android:textSize="24sp" />


    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:id="@+id/da"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/phone"
        android:layout_below="@+id/phone"
        >


        <AutoCompleteTextView
            android:id="@+id/descriptionTextView"
            android:layout_width="286dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone"
            android:layout_alignBottom="@+id/phone"
            android:hint="@string/description"
            android:inputType="textAutoCorrect|textMultiLine|textLongMessage|textFilter|textCapSentences"
            android:maxLength="100" />


    </android.support.design.widget.TextInputLayout>

    <!--app:counterTextAppearance="@style/TextLimitStyle">-->

    <TextView
        android:id="@+id/title_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/_0_100"
        android:layout_below="@+id/da"
        android:layout_alignParentRight="true"
        android:layout_marginRight="65dp"/>





    <Button
        android:id="@+id/camerabutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="135dp"
        android:drawableStart="@drawable/ic_menu_camera"
        android:onClick="cameraUpload"
        android:text="@string/upload_photo_from_gallary" />


    <ImageView
        android:id="@+id/Cameraimageview"
        android:layout_width="150dp"
        android:layout_height="139dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="-109dp"
        android:layout_toStartOf="@+id/ilosttextView"
        android:contentDescription="@string/todo"/>
        <!--android:src="@drawable/noimage"-->


    <Button
        android:id="@+id/ilostreportbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/name"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-10dp"
        android:layout_marginBottom="10dp"
        android:onClick="ilostbuttonClicked"
        android:text="@string/report_lost" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noteTitle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/noteBody"/>

    <Button
        android:id="@+id/fetch_location"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ilostreportbtn"
        android:layout_alignStart="@+id/ilostreportbtn"
        android:layout_alignEnd="@+id/ilostreportbtn"
        android:layout_alignRight="@+id/ilostreportbtn"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="15dp"
        android:text="GET GPS" />

    <TextView
        android:id="@+id/user_location"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_above="@+id/camerabutton"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="-1dp"
        android:text="GPS LOCATION"
        android:onClick="gps_location"/>


</RelativeLayout>