<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity"
    android:background="@color/colorPrimary">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="137dp"
        android:layout_height="105dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@mipmap/lbf1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/scrollview"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:fontFamily="cursive"
        android:text="@string/_2018_KrisyMay_project_all_rights_reserved"
        android:textAlignment="center"
        android:textColor="@color/cardview_light_background"
        android:typeface="sans" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/imageView2">


        <TextView
            android:textColor="@color/likeWhite"
            android:layout_marginStart="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif"
            android:text="@string/aboutApp"
            android:layout_marginEnd="10dp"/>
    </ScrollView>


</RelativeLayout>