<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BottomHomeFragment"
    android:background="@drawable/hmebckgrnd" >

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="monospace"
        android:text="@string/news_feed"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:typeface="sans" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false">

        <Button
            android:id="@+id/homelostbtns"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="187dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/homefoundbtn"
            android:background="@color/buttnclrs4home"
            android:text="@string/lost_items"
            android:textAlignment="center"
            android:textColor="@color/likeWhite" />

        <Button
            android:id="@+id/homefoundbtns"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/buttnclrs4home"
            android:text="@string/found_items"
            android:textAlignment="center"
            android:textColor="@color/likeWhite" />


    </RelativeLayout>



</FrameLayout>
